# unitoken

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
.github/scripts/: run-benchmark-suite.sh  update-benchmark-comment.cjs  update-benchmark-comment.test.cjs  validate-benchmark-reports.sh  validate-benchmark-reports.test.sh
.github/workflows/: bench-comment.yml  bench.yml  ci.yml  release.yml  wheels.yml
benches/: bpe.rs
benches/regression/: codec.rs  codec_bench.rs  config.rs  fingerprint.rs  main.rs  pretokenizer.rs  pretokenizer_bench.rs  process.rs  report.rs  rss.rs  runner.rs  suite.rs  trainer.rs
benches/regression/common/: config.rs  environment.rs  fingerprint.rs  mod.rs  process.rs  report.rs  util.rs
benches/regression/config/: 1gib.yml  64mib.yml  smoke.yml
benchmarks/: README.md  common.py  compare_hf_training.py  compare_tiktoken.py  count_parquet_source.py  create_fineweb2_sample.py  create_golden_model.py  profile_pretokenizer.py  profile_trainer.py  profile_training_core.py  unicode_bigram_split.py
examples/: profile_perf.rs
fixtures/: merges.TinyStories_all_data_zh_1M-sample.bbpe-r90-v1000.uni.txt  merges.TinyStories_all_data_zh_1M-sample.uni.txt  merges.tinystories_sample_5M.txt  vocab.TinyStories_all_data_zh_1M-sample.bbpe-r90-v1000.uni.json  vocab.TinyStories_all_data_zh_1M-sample.uni.json  vocab.tinystories_sample_5M.json
python/tiktoken/: __init__.py  core.py  model.py  registry.py
python/uni_tokenizer/: __init__.py  _lib.pyi  encoder.py  model.py  pretokenizer.py  tiktoken_compat.py  trainer.py
python/uni_tokenizer/tiktoken/: __init__.py  core.py  load.py  model.py  registry.py
python/unicode_tokenizer/: __init__.py  _lib.pyi
python/unitoken/: _lib.pyi  encoder.py  trainer.py
src/: _metrics.rs  bigram.rs  counter.rs  lib.rs  main.rs  pretokenizer.rs  py.rs  traits.rs
src/bpe/: encoder.rs  hot_window.rs  mod.rs  model.rs  pair.rs  trainer.rs  utils.rs
src/bpe/trainer/: analysis.rs
src/spec/: mod.rs  unitoken.rs
tests/: regression_report.rs  test_benchmark_manifest.py  test_hf_training_parity.py  test_python_api.py  test_tiktoken_compat.py
