[package]
name = "unitoken"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fancy-regex = "0.16.2"
lazy_static = "1.5.0"
ordermap = { version = "1.0.0", features = ["serde"] }
memchr = "2.7.6"
serde_json = "1.0.145"
thiserror = "2.0.17"
rayon = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
moka = { version = "0.12.11", features = ["sync"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
metrics = "0.24.3"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
textplots = { version = "0.8.7", optional = true }
rgb = { version = "0.8.52", optional = true } # optional for textplots
indicatif = "0.18.3"
hotpath = "0.8.0"
npyz = { version = "0.8.4" }
pyo3 = { version = "0.27", optional = true, features = ["experimental-inspect"] }
ndarray = { version = "0.17.1", optional = true }
numpy = { version = "0.27.1", optional = true }

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "release"
debug = true

[profile.release]
# 'line-tables-only' is a good balance between file size and profiling detail
debug = "line-tables-only"
# RUSTFLAGS="-C force-frame-pointers=yes" cargo build --release

[features]
default = ["plot", "py"]
hotpath = ["hotpath/hotpath", "hotpath/hotpath-alloc"]

fmt-npz = ["npyz/npz"]

plot = ["dep:textplots", "dep:rgb"]
py = ["dep:pyo3", "dep:ndarray", "dep:numpy"]

[dev-dependencies]
pyo3-introspection = "0.27"
criterion = "0.5.1"

[[bench]]
name = "bpe"
harness = false

[patch.crates-io]
pyo3 = { git = 'https://github.com/PyO3/pyo3' } # for pyo3-introspection
pyo3-introspection = { git = 'https://github.com/PyO3/pyo3' } # for https://github.com/PyO3/pyo3/issues/5137
