[project]
name = "uni-tokenizer"
version = "0.1.5"
description = "Fast BPE tokenizer/trainer with a Rust core and Python bindings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.urls]
Repository = "https://github.com/tokn-ai/unitoken"

[dependency-groups]
dev = [
  "pyarrow>=21.0.0",
  "pytest>=9.0.3",
  "requests>=2.32.5",
  "tiktoken>=0.12.0",
  "tokenizers>=0.22.1",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "src/**/*.rs"}]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "uni_tokenizer._lib"
bindings = "pyo3"
features = ["py"]
